--- a/post/bicycle/index.gmi
+++ b/post/bicycle/index.gmi
@@ -18,9 +18,9 @@ See this video [1] or any really to see how to fit your bike and seat post prope
 
 ## Related articles
 
+=> /post/dont-look-up/index.gmi Don't Look Up
 => /post/saved-articles-2/index.gmi My Saved Articles 2
 => /post/vanessa-hudgens/index.gmi Review: The Princess Switch 2: Switched Again
-=> /post/broken-clock/index.gmi A Broken Clock Isn't Right Twice a Day
 ---
 
 => / Back to site home
