--- a/post/checkout-lane/index.gmi
+++ b/post/checkout-lane/index.gmi
@@ -54,9 +54,9 @@ Either way, I'm excited to be back in a country that does grocery shopping prope
 
 ## Related articles
 
+=> /post/dont-look-up/index.gmi Don't Look Up
 => /post/saved-articles-2/index.gmi My Saved Articles 2
 => /post/vanessa-hudgens/index.gmi Review: The Princess Switch 2: Switched Again
-=> /post/broken-clock/index.gmi A Broken Clock Isn't Right Twice a Day
 ---
 
 => / Back to site home
