--- a/post/equal-rites/index.gmi
+++ b/post/equal-rites/index.gmi
@@ -65,9 +65,9 @@ I can't recommend this book enough.
 
 ## Related articles
 
+=> /post/dont-look-up/index.gmi Don't Look Up
 => /post/saved-articles-2/index.gmi My Saved Articles 2
 => /post/vanessa-hudgens/index.gmi Review: The Princess Switch 2: Switched Again
-=> /post/broken-clock/index.gmi A Broken Clock Isn't Right Twice a Day
 ---
 
 => / Back to site home
