--- a/post/hedonic-treadmill/index.gmi
+++ b/post/hedonic-treadmill/index.gmi
@@ -98,9 +98,9 @@ The **Nihilistic Perfectly-Tuned Mass-Spring-Damper of Happiness** is the observ
 
 ## Related articles
 
+=> /post/dont-look-up/index.gmi Don't Look Up
 => /post/saved-articles-2/index.gmi My Saved Articles 2
 => /post/vanessa-hudgens/index.gmi Review: The Princess Switch 2: Switched Again
-=> /post/broken-clock/index.gmi A Broken Clock Isn't Right Twice a Day
 ---
 
 => / Back to site home
