--- a/post/infinite-states/index.gmi
+++ b/post/infinite-states/index.gmi
@@ -51,9 +51,9 @@ True and false are binary states; are there alternative states a sentence can po
 
 ## Related articles
 
+=> /post/dont-look-up/index.gmi Don't Look Up
 => /post/saved-articles-2/index.gmi My Saved Articles 2
 => /post/vanessa-hudgens/index.gmi Review: The Princess Switch 2: Switched Again
-=> /post/broken-clock/index.gmi A Broken Clock Isn't Right Twice a Day
 ---
 
 => / Back to site home
