--- a/post/murphy/index.gmi
+++ b/post/murphy/index.gmi
@@ -40,9 +40,9 @@ Obviously, not every situation you find yourself in can be gamed to have a posit
 
 ## Related articles
 
+=> /post/dont-look-up/index.gmi Don't Look Up
 => /post/saved-articles-2/index.gmi My Saved Articles 2
 => /post/vanessa-hudgens/index.gmi Review: The Princess Switch 2: Switched Again
-=> /post/broken-clock/index.gmi A Broken Clock Isn't Right Twice a Day
 ---
 
 => / Back to site home
