--- a/post/saved-articles-2/index.gmi
+++ b/post/saved-articles-2/index.gmi
@@ -209,9 +209,9 @@ Fantasy, butterflies, pyramid schemes, deadly sausages, pepsi fighter jets, and 
 
 ## Related articles
 
+=> /post/dont-look-up/index.gmi Don't Look Up
 => /post/vanessa-hudgens/index.gmi Review: The Princess Switch 2: Switched Again
 => /post/broken-clock/index.gmi A Broken Clock Isn't Right Twice a Day
-=> /post/murphy/index.gmi Beating Murphy
 ---
 
 => / Back to site home
