--- a/post/saved-articles/index.gmi
+++ b/post/saved-articles/index.gmi
@@ -232,9 +232,9 @@ Dothraki, Michael Scott, Philosophy, Satire, SpongeBob, and all kinds of other s
 
 ## Related articles
 
+=> /post/dont-look-up/index.gmi Don't Look Up
 => /post/saved-articles-2/index.gmi My Saved Articles 2
 => /post/vanessa-hudgens/index.gmi Review: The Princess Switch 2: Switched Again
-=> /post/broken-clock/index.gmi A Broken Clock Isn't Right Twice a Day
 ---
 
 => / Back to site home
