--- a/post/chicken-pot-pie/index.gmi
+++ b/post/chicken-pot-pie/index.gmi
@@ -125,9 +125,9 @@ He smiled as that violent wall of force and heat rose to meet him.
 
 ## Related articles
 
+=> /post/impermanence/index.gmi Review: Impermanence - Abbey Road Version by Architects
+=> /post/idiocracy/index.gmi Is There a Truth to Idiocracy?
 => /post/dont-look-up/index.gmi Don't Look Up
-=> /post/saved-articles-2/index.gmi My Saved Articles 2
-=> /post/vanessa-hudgens/index.gmi Review: The Princess Switch 2: Switched Again
 ---
 
 => / Back to site home
