--- a/post/bears/index.gmi
+++ b/post/bears/index.gmi
@@ -22,9 +22,9 @@ Bears! (1.6MB) [2]
 
 ## Related articles
 
+=> /post/impermanence/index.gmi Review: Impermanence - Abbey Road Version by Architects
+=> /post/idiocracy/index.gmi Is There a Truth to Idiocracy?
 => /post/dont-look-up/index.gmi Don't Look Up
-=> /post/saved-articles-2/index.gmi My Saved Articles 2
-=> /post/vanessa-hudgens/index.gmi Review: The Princess Switch 2: Switched Again
 ---
 
 => / Back to site home
