--- a/post/checkout-lane/index.gmi
+++ b/post/checkout-lane/index.gmi
@@ -54,9 +54,9 @@ Either way, I'm excited to be back in a country that does grocery shopping prope
 
 ## Related articles
 
+=> /post/impermanence/index.gmi Review: Impermanence - Abbey Road Version by Architects
+=> /post/idiocracy/index.gmi Is There a Truth to Idiocracy?
 => /post/dont-look-up/index.gmi Don't Look Up
-=> /post/saved-articles-2/index.gmi My Saved Articles 2
-=> /post/vanessa-hudgens/index.gmi Review: The Princess Switch 2: Switched Again
 ---
 
 => / Back to site home
