--- a/post/hedonic-treadmill/index.gmi
+++ b/post/hedonic-treadmill/index.gmi
@@ -98,9 +98,9 @@ The **Nihilistic Perfectly-Tuned Mass-Spring-Damper of Happiness** is the observ
 
 ## Related articles
 
+=> /post/impermanence/index.gmi Review: Impermanence - Abbey Road Version by Architects
+=> /post/idiocracy/index.gmi Is There a Truth to Idiocracy?
 => /post/dont-look-up/index.gmi Don't Look Up
-=> /post/saved-articles-2/index.gmi My Saved Articles 2
-=> /post/vanessa-hudgens/index.gmi Review: The Princess Switch 2: Switched Again
 ---
 
 => / Back to site home
