--- a/post/hikes/index.gmi
+++ b/post/hikes/index.gmi
@@ -123,12 +123,20 @@ A welcomed change of pace after being stuck under those same clouds in Zurich fo
 
 ## 2022
 
-**Uetliber** - And back up we go! The walk up isn't as pretty in the winter, but the view from the top is still absolutely gorgeous.
+### Switzerland
+
+**Uetliberg** - And back up we go! The walk up isn't as pretty in the winter, but the view from the top is still absolutely gorgeous.
 I've also heard that the mountains are more visible in colder months, which I certainly won't complain about as a trade-off.
+
+### California
+
+**Alum Rock Park** - My partner and I did a cute little 10km-ish hike up one of the hills and back down.
+We got a nice view of San Jose and the surrounding hills in the process.
+The weather was surprisingly mild, although I guess it makes sense, being the rainy season and all in February.
 
 
 ---
-20 January 2022.
+7 March 2022.
 
 ## References
  
