--- a/post/gemini-theme/index.gmi
+++ b/post/gemini-theme/index.gmi
@@ -38,9 +38,9 @@ It's not the most efficient thing in the world, but I'm just happy to have it wo
 
 ## Related articles
 
+=> /post/macbook/index.gmi Macbook Air M1
 => /post/termux/index.gmi Termux and Android
 => /post/tfa-2/index.gmi Two-Factor Authentication and Digital Hygiene
-=> /post/ddg-google/index.gmi Duck Duck Go > Google
 ---
 
 => / Back to site home
