--- a/post/hikes/index.gmi
+++ b/post/hikes/index.gmi
@@ -128,6 +128,8 @@ A welcomed change of pace after being stuck under those same clouds in Zurich fo
 **Uetliberg** - And back up we go! The walk up isn't as pretty in the winter, but the view from the top is still absolutely gorgeous.
 I've also heard that the mountains are more visible in colder months, which I certainly won't complain about as a trade-off.
 
+**Mount Pilatus** - Round two. I brought proper insulating and rain-proof layers, which ended up being a bit overkill considering how beautiul the weather was. Oh well. Everything above the tree-line was covered in snow which varied from hard-packed on the more established improvised route, to sink-holes and what I can only describe as mini tree-wells. The regular switch-back trail wasn't visible, so I followed what I certainly hope were the remnants of someone else's footsteps in a beeline up every incline, turning an already difficult hike into a grueling ascent, sometimes on my hands and feet or sinking to my knees in powder snow. It's definitely set my expectations for other mountains during the winter/spring; don't, unless you're familiar with them already or they're small enough to have no snow (or have more experience than me).
+
 ### California
 
 **Alum Rock Park** - My partner and I did a cute little 10km-ish hike up one of the hills and back down.
@@ -136,7 +138,7 @@ The weather was surprisingly mild, although I guess it makes sense, being the ra
 
 
 ---
-7 March 2022.
+12 March 2022.
 
 ## References
  
