--- a/post/hikes/index.gmi
+++ b/post/hikes/index.gmi
@@ -55,7 +55,7 @@ There's a rope somewhere on the route which you can use to swing out over and in
 
 ## 2021
 
-### Whiteshell Provincial Park
+### Whiteshell Provincial Park (June-July)
 
 **Caribou Lake Campsite West via Mantario Trail South Trailhead** - We did this twice to train for Mantario Trail.
 It's about 20km there-and-back, covering the arguably hardest chunk of Mantario; lots of ups and downs, exposed shield and boggy forest.
@@ -63,7 +63,7 @@ Ticks and mosquitoes too; I hate Canada.
 
 **Mantario Trail** - See the full review here [1]
 
-### Waterton Lakes National Park
+### Waterton Lakes National Park (August)
 
 While there was smog from the forest fires, we still had good visibility for adjacent mountains.
 
@@ -103,18 +103,18 @@ Cute and with lots of berries at the end.
 
 ### Switzerland
 
-**Uetliberg** - This is right by my Woko, so I've gone up a couple times now.
+**Uetliberg (September)** - This is right by my Woko, so I've gone up a couple times now.
 Gorgeous view from the top of Zuerich and, if the weather permits it, the distant Alps.
 
-**Mount Pilatus** - I did this without checking the whether and prepping properly in mid-september.
+**Mount Pilatus (September)** - I did this without checking the whether and prepping properly in mid-september.
 It was 0 celsius, raining, and windy, but absolutely gorgeous; I'd love to go back when the weather it nicer.
 
-**Mount Santis** - I did this with some university peeps in abolutely perfect weather.
+**Mount Santis (October)** - I did this with some university peeps in abolutely perfect weather.
 We took the big bowl route, so started at Wasserauen, hiked up to Schäfler, then along the mountain ridge to Säntis, then down the opposite side of the bowl back to Wasserauen.
 It was absolutely gorgeous, possibly the nicest looking hike I've done.
 It definitely didn't match Galwey in terms of difficulty, but still had plenty of steep switch-backs and cable-guided fall-to-your-death sections.
 
-**Wildspitz** - A nice, easy day hike with great views of the surrounding Alps.
+**Wildspitz (November)** - A nice, easy day hike with great views of the surrounding Alps.
 It was cool getting to see mountains I've previously hiked in the distance, like Santis and Jungfrau (well, I hiked to Shilthorn, so close enough).
 The clouds were incredibly low and covered everything which wasn't a mountain; it felt like we were above a massive white lake.
 A welcomed change of pace after being stuck under those same clouds in Zurich for the last few weeks.
@@ -125,20 +125,22 @@ A welcomed change of pace after being stuck under those same clouds in Zurich fo
 
 ### Switzerland
 
-**Uetliberg** - And back up we go! The walk up isn't as pretty in the winter, but the view from the top is still absolutely gorgeous.
+**Uetliberg (January)** - And back up we go! The walk up isn't as pretty in the winter, but the view from the top is still absolutely gorgeous.
 I've also heard that the mountains are more visible in colder months, which I certainly won't complain about as a trade-off.
 
-**Mount Pilatus** - Round two. I brought proper insulating and rain-proof layers, which ended up being a bit overkill considering how beautiul the weather was. Oh well. Everything above the tree-line was covered in snow which varied from hard-packed on the more established improvised route, to sink-holes and what I can only describe as mini tree-wells. The regular switch-back trail wasn't visible, so I followed what I certainly hope were the remnants of someone else's footsteps in a beeline up every incline, turning an already difficult hike into a grueling ascent, sometimes on my hands and feet or sinking to my knees in powder snow. It's definitely set my expectations for other mountains during the winter/spring; don't, unless you're familiar with them already or they're small enough to have no snow (or have more experience than me).
+**Mount Pilatus (March)** - Round two. I brought proper insulating and rain-proof layers, which ended up being a bit overkill considering how beautiul the weather was. Oh well. Everything above the tree-line was covered in snow which varied from hard-packed on the more established improvised route, to sink-holes and what I can only describe as mini tree-wells. The regular switch-back trail wasn't visible, so I followed what I certainly hope were the remnants of someone else's footsteps in a beeline up every incline, turning an already difficult hike into a grueling ascent, sometimes on my hands and feet or sinking to my knees in powder snow. It's definitely set my expectations for other mountains during the winter/spring; don't, unless you're familiar with them already or they're small enough to have no snow (or have more experience than me).
+
+**Stanserhorn (March)** - Pilatus' slightly shorter neighbor. I didn't end up making it to the top; I got within a couple hundred meters, but a combination of zero visibility due to being in the clouds and trying to walk horizontally along a 70-ish degree incline with thigh-deep snow resulted in a bunch of short slides and following animal tracks instead of the buried trail. Eventually, I decided that rolling down a mountain wasn't how I wanted to die. I'd love to do this again, but with nicer weather.
 
 ### California
 
-**Alum Rock Park** - My partner and I did a cute little 10km-ish hike up one of the hills and back down.
+**Alum Rock Park (February)** - My partner and I did a cute little 10km-ish hike up one of the hills and back down.
 We got a nice view of San Jose and the surrounding hills in the process.
 The weather was surprisingly mild, although I guess it makes sense, being the rainy season and all in February.
 
 
 ---
-12 March 2022.
+18 March 2022.
 
 ## References
  
