--- a/post/video-games/index.gmi
+++ b/post/video-games/index.gmi
@@ -90,9 +90,9 @@ No clue.
 
 ## Related articles
 
+=> /post/hikes/index.gmi [Living] Hikes
 => /post/things-i-want-to-do/index.gmi Things I Want to Do
 => /post/switzerland-4-month/index.gmi Living and Studying in Switzerland - 4 Month Retrospective
-=> /post/job-stats/index.gmi My Job Application Statistics
 ---
 
 => / Back to site home
