--- a/post/hikes/index.gmi
+++ b/post/hikes/index.gmi
@@ -140,9 +140,15 @@ I've also heard that the mountains are more visible in colder months, which I ce
 We got a nice view of San Jose and the surrounding hills in the process.
 The weather was surprisingly mild, although I guess it makes sense, being the rainy season and all in February.
 
+**Big Sur (April)** - My partner, some of her friends, and I went to Big Sur over the weekend.
+It was my first time outside the Bay Area and was very nice; we hiked Bluffs and Panorama Trail via Creamery Meadow, which was a cute little 12k trail along the coast.
+The last time I was near the ocean was Hawaii; mixing tall-ish hills with ocean cliffs was definitely a change of scenery from the snowy mountains I've been doing for the last couple months.
+We also did the first few km of the Vicente Flat Trail starting outside Kirk Creek Campground, but turned around to get a campsite when they opened.
+I may have burned a little bit; I definitely need to get my hands on some long-sleeve clothes and a wide-brim hat for hiking.
+
 
 ---
-27 March 2022.
+2 May 2022.
 
 ## References
  
