--- a/post/impermanence/index.gmi
+++ b/post/impermanence/index.gmi
@@ -50,9 +50,9 @@ Cool instrumentals, orchestras make everything more epic, cringy lyrics.
 
 ## Related articles
 
-=> /post/idiocracy/index.gmi Is There a Truth to Idiocracy?
-=> /post/dont-look-up/index.gmi Don't Look Up
-=> /post/saved-articles-2/index.gmi My Saved Articles 2
+=> /post/the-goblin-emperor/index.gmi Review: The Goblin Emperor
+=> /post/vanessa-hudgens/index.gmi Review: The Princess Switch 2: Switched Again
+=> /post/equal-rites/index.gmi Review: Equal Rites (Discworld)
 ---
 
 => / Back to site home
