--- a/post/vanessa-hudgens/index.gmi
+++ b/post/vanessa-hudgens/index.gmi
@@ -30,9 +30,9 @@ Rating: Vanessa Hudgens/10
 
 ## Related articles
 
+=> /post/the-goblin-emperor/index.gmi Review: The Goblin Emperor
 => /post/impermanence/index.gmi Review: Impermanence - Abbey Road Version by Architects
-=> /post/idiocracy/index.gmi Is There a Truth to Idiocracy?
-=> /post/dont-look-up/index.gmi Don't Look Up
+=> /post/equal-rites/index.gmi Review: Equal Rites (Discworld)
 ---
 
 => / Back to site home
