--- a/post/bicycle/index.gmi
+++ b/post/bicycle/index.gmi
@@ -18,9 +18,9 @@ See this video [1] or any really to see how to fit your bike and seat post prope
 
 ## Related articles
 
-=> /post/impermanence/index.gmi Review: Impermanence - Abbey Road Version by Architects
 => /post/idiocracy/index.gmi Is There a Truth to Idiocracy?
 => /post/dont-look-up/index.gmi Don't Look Up
+=> /post/saved-articles-2/index.gmi My Saved Articles 2
 ---
 
 => / Back to site home
