--- a/post/broken-clock/index.gmi
+++ b/post/broken-clock/index.gmi
@@ -24,9 +24,9 @@ Join me next time when I "prove" that the egg does come before the chicken.
 
 ## Related articles
 
-=> /post/impermanence/index.gmi Review: Impermanence - Abbey Road Version by Architects
 => /post/idiocracy/index.gmi Is There a Truth to Idiocracy?
 => /post/dont-look-up/index.gmi Don't Look Up
+=> /post/saved-articles-2/index.gmi My Saved Articles 2
 ---
 
 => / Back to site home
