--- a/post/gab/index.gmi
+++ b/post/gab/index.gmi
@@ -240,9 +240,9 @@ Comparing Gab more thoroughly to other social media platforms is a topic for ano
 
 ## Related articles
 
-=> /post/impermanence/index.gmi Review: Impermanence - Abbey Road Version by Architects
 => /post/idiocracy/index.gmi Is There a Truth to Idiocracy?
 => /post/dont-look-up/index.gmi Don't Look Up
+=> /post/saved-articles-2/index.gmi My Saved Articles 2
 ---
 
 => / Back to site home
