--- a/post/murphy/index.gmi
+++ b/post/murphy/index.gmi
@@ -40,9 +40,9 @@ Obviously, not every situation you find yourself in can be gamed to have a posit
 
 ## Related articles
 
-=> /post/impermanence/index.gmi Review: Impermanence - Abbey Road Version by Architects
 => /post/idiocracy/index.gmi Is There a Truth to Idiocracy?
 => /post/dont-look-up/index.gmi Don't Look Up
+=> /post/saved-articles-2/index.gmi My Saved Articles 2
 ---
 
 => / Back to site home
