--- a/post/gemini-theme/index.gmi
+++ b/post/gemini-theme/index.gmi
@@ -40,7 +40,7 @@ It's not the most efficient thing in the world, but I'm just happy to have it wo
 
 => /post/macbook/index.gmi Macbook Air M1
 => /post/termux/index.gmi Termux and Android
-=> /post/tfa-2/index.gmi Two-Factor Authentication and Digital Hygiene
+=> /post/colab/index.gmi Homebrew Google Colab with JupyterLab and Linode
 ---
 
 => / Back to site home
