--- a/post/termux/index.gmi
+++ b/post/termux/index.gmi
@@ -22,7 +22,7 @@ I don't doubt that Termux might fall short for actual-software-engineering-level
 
 => /post/macbook/index.gmi Macbook Air M1
 => /post/gemini-theme/index.gmi New Theme and Gemini!
-=> /post/tfa-2/index.gmi Two-Factor Authentication and Digital Hygiene
+=> /post/colab/index.gmi Homebrew Google Colab with JupyterLab and Linode
 ---
 
 => / Back to site home
