--- a/post/hikes/index.gmi
+++ b/post/hikes/index.gmi
@@ -146,6 +146,15 @@ The last time I was near the ocean was Hawaii; mixing tall-ish hills with ocean 
 We also did the first few km of the Vicente Flat Trail starting outside Kirk Creek Campground, but turned around to get a campsite when they opened.
 I may have burned a little bit; I definitely need to get my hands on some long-sleeve clothes and a wide-brim hat for hiking.
 
+**Ansel Adams Wilderness (July)** - My partner and I did a two day loop near Mammoth Lakes, our first couple trip.
+We started at Agnew Meadows and hiked the JMT up past Shadow Lake, Garnet Lake, and finally reached Thousand Island Lake for the night.
+We then took the PCT on the way back.
+The way up was quite intimite, with close-up views of the Minarets and Banner Peak across from crystal-lakes.
+It also had decent tree coverage and very few bugs.
+The way back was kind of brutal, with very little cover to protect from the sun and a ludicrous number of mosquitoes.
+Getting to see the rest of the valley, as well as parts of the path we had hiked the day prior, such as Shadow Lake, was well worth it though.
+I ended up getting a wide-brim hat and long-sleeve sun-shirt, and my ears, neck and arms have never been so unburned.
+
 
 ---
 2 May 2022.
