--- a/post/wide-shoes/index.gmi
+++ b/post/wide-shoes/index.gmi
@@ -48,9 +48,9 @@ I hate wasting so much time waiting for another pair of shoes to come in, only f
 
 ## Related articles
 
-=> /post/hikes/index.gmi [Living] Hikes
 => /post/things-i-want-to-do/index.gmi Things I Want to Do
 => /post/all-music-sucks-2/index.gmi Update: All Music Sucks
+=> /post/switzerland-4-month/index.gmi Living and Studying in Switzerland - 4 Month Retrospective
 ---
 
 => / Back to site home
