--- a/post/music-listening-to-2/index.gmi
+++ b/post/music-listening-to-2/index.gmi
@@ -64,9 +64,9 @@ I've been revisiting Nero's original album; "Doomsday" and "My Eyes" still slap 
 
 ## Related articles
 
-=> /post/hikes/index.gmi [Living] Hikes
 => /post/things-i-want-to-do/index.gmi Things I Want to Do
 => /post/switzerland-4-month/index.gmi Living and Studying in Switzerland - 4 Month Retrospective
+=> /post/job-stats/index.gmi My Job Application Statistics
 ---
 
 => / Back to site home
