--- a/post/port-blocking/index.gmi
+++ b/post/port-blocking/index.gmi
@@ -19,9 +19,9 @@ I guess I'm just keeping my VPN subscription until the end of my degree.
 
 ## Related articles
 
-=> /post/hikes/index.gmi [Living] Hikes
 => /post/things-i-want-to-do/index.gmi Things I Want to Do
 => /post/switzerland-4-month/index.gmi Living and Studying in Switzerland - 4 Month Retrospective
+=> /post/job-stats/index.gmi My Job Application Statistics
 ---
 
 => / Back to site home
