--- a/post/still-alive/index.gmi
+++ b/post/still-alive/index.gmi
@@ -26,9 +26,9 @@ I'm excited to work on this again.
 
 ## Related articles
 
-=> /post/hikes/index.gmi [Living] Hikes
 => /post/things-i-want-to-do/index.gmi Things I Want to Do
 => /post/switzerland-4-month/index.gmi Living and Studying in Switzerland - 4 Month Retrospective
+=> /post/job-stats/index.gmi My Job Application Statistics
 ---
 
 => / Back to site home
