--- a/post/hikes/index.gmi
+++ b/post/hikes/index.gmi
@@ -155,9 +155,16 @@ The way back was kind of brutal, with very little cover to protect from the sun 
 Getting to see the rest of the valley, as well as parts of the path we had hiked the day prior, such as Shadow Lake, was well worth it though.
 I ended up getting a wide-brim hat and long-sleeve sun-shirt, and my ears, neck and arms have never been so unburned.
 
+**May Lake and Mount Hoffman (July)** - My partner, a few friends and I went to May Lake in Yosemite.
+Day one, there were blue skies, minus a big 'ol plume of smoke coming the oak fire near Jerseydale.
+They gave me a quick tour of the valley, then we drove up to May Lake and hiked the mile or so to the lake itself.
+I made an attempt at Mount Hoffman, but it was a bit too late, so I stopped before the shield near the top.
+I got up early the next morning and made it to the summit, but had to book it down since the smoke was spreading from the fire insanely fast thanks to some inopportune winds.
+We tried to start our actual route from May Lake down into the valley, but the smoke thickened to the point we were worried about our health, so we turned around and left.
+
 
 ---
-11 July 2022.
+23 July 2022.
 
 ## References
  
