--- a/post/impermanence/index.gmi
+++ b/post/impermanence/index.gmi
@@ -50,9 +50,9 @@ Cool instrumentals, orchestras make everything more epic, cringy lyrics.
 
 ## Related articles
 
-=> /post/the-goblin-emperor/index.gmi Review: The Goblin Emperor
-=> /post/vanessa-hudgens/index.gmi Review: The Princess Switch 2: Switched Again
-=> /post/equal-rites/index.gmi Review: Equal Rites (Discworld)
+=> /post/the-lighthouse/index.gmi Review: The Lighthouse
+=> /post/hyperion/index.gmi Review: Hyperion
+=> /post/dune/index.gmi Review: Dune (The Movie)
 ---
 
 => / Back to site home
