--- a/post/the-goblin-emperor/index.gmi
+++ b/post/the-goblin-emperor/index.gmi
@@ -25,9 +25,9 @@ So yeah, a solid 3/5; expectations met, would recommend.
 
 ## Related articles
 
-=> /post/impermanence/index.gmi Review: Impermanence - Abbey Road Version by Architects
-=> /post/vanessa-hudgens/index.gmi Review: The Princess Switch 2: Switched Again
-=> /post/equal-rites/index.gmi Review: Equal Rites (Discworld)
+=> /post/the-lighthouse/index.gmi Review: The Lighthouse
+=> /post/hyperion/index.gmi Review: Hyperion
+=> /post/dune/index.gmi Review: Dune (The Movie)
 ---
 
 => / Back to site home
