--- a/post/vanessa-hudgens/index.gmi
+++ b/post/vanessa-hudgens/index.gmi
@@ -30,9 +30,9 @@ Rating: Vanessa Hudgens/10
 
 ## Related articles
 
-=> /post/the-goblin-emperor/index.gmi Review: The Goblin Emperor
-=> /post/impermanence/index.gmi Review: Impermanence - Abbey Road Version by Architects
-=> /post/equal-rites/index.gmi Review: Equal Rites (Discworld)
+=> /post/the-lighthouse/index.gmi Review: The Lighthouse
+=> /post/hyperion/index.gmi Review: Hyperion
+=> /post/dune/index.gmi Review: Dune (The Movie)
 ---
 
 => / Back to site home
